--- a/src/components/Page2/Page2.module.css
+++ b/src/components/Page2/Page2.module.css
@@ -9,7 +9,7 @@
 }
 
 .mainContainer {
-  width: 100%;
+
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -43,7 +43,6 @@
 @media (max-width: 1318px) {
   .subTitle {
     margin-left: 0;
-    
   }
 }
 
