--- a/src/components/Page3/Page3.module.css
+++ b/src/components/Page3/Page3.module.css
@@ -9,7 +9,7 @@
 }
 
 .mainContainer {
-  width: 100%;
+
   height: 100vh;
   display: flex;
   flex-direction: column;
