--- a/src/components/Page4/Page4.module.css
+++ b/src/components/Page4/Page4.module.css
@@ -9,12 +9,12 @@
 }
 
 .mainContainer {
-  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #b4b4b4;
 }
+
 
 .title {
   flex: 2;
